Review + polish of dev blogs

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -269,8 +269,8 @@ jason_ganz:
   name: Jason Ganz
   page: true 
 jeremy_cohen:
-  image_url: /img/blog/authors/jerco.jpeg
-  title: Product Manager at dbt Labs
+  image_url: /img/blog/authors/jerco.png
+  title: Principal Product Manager at dbt Labs
   name: Jeremy Cohen
   page: true 
 jerrie_kumalah_kenney:
