--- a/website/blog/metadata.yml
+++ b/website/blog/metadata.yml
@@ -2,7 +2,7 @@
 featured_image: ""
 
 # This CTA lives in right sidebar on blog index
-featured_cta: "launch_showcase_2025"
+featured_cta: "on_demand_launch_showcase_2025"
 
 # Show or hide hero title, description, cta from blog index
 show_title: false
