--- a/website/blog/ctas.yml
+++ b/website/blog/ctas.yml
@@ -40,3 +40,8 @@
   subheader: Join us on May 28 to hear from our executives and product leaders about the latest features landing in dbt.
   button_text: Save your seat
   url: https://www.getdbt.com/resources/webinars/2025-dbt-cloud-launch-showcase
+- name: on_demand_launch_showcase_2025
+  header: 2025 dbt Launch Showcase on-demand 
+  subheader: Watch our annual dbt Launch Showcase to hear from our executives and product leaders about the latest features landing in dbt. 
+  button_text: Watch the talks
+  url: https://www.getdbt.com/resources/webinars/2025-dbt-cloud-launch-showcase
