try to get the backgrop filter working on vercel

--- a/website/vercel.json
+++ b/website/vercel.json
@@ -1,6 +1,11 @@
 {
   "cleanUrls": true,
   "trailingSlash": false,
+  "build": {
+    "css": {
+      "preserve": ["backdrop-filter"]
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
