--- a/website/vercel.json
+++ b/website/vercel.json
@@ -39,6 +39,11 @@
   ],
   "redirects": [
     {
+      "source": "/docs/cloud/account-integrations?ai-integration=azure#ai-integrations",
+      "destination": "/docs/cloud/enable-dbt-copilot#ai-integrations",
+      "permanent": true
+    },
+    {
       "source": "/docs/cloud/secure/about-privatelink",
       "destination": "/docs/cloud/secure/about-private-connectivity",
       "permanent": true
