Linear dbt bigframes blog (#7625)
## What are you changing in this pull request and why?

* Blog via partner engineering and Jeff Mills
* Added author images and edited blog post from this [restricted google
doc](https://docs.google.com/document/d/1LI1lbK1L0wOBu-kLyNOTLZ6YcRC6AVnlaxtt-2Qz3JU/edit?resourcekey=0-xR6zZYoe9LkM_jETLTzRlw&tab=t.0)

- [x] Still need dbt SME review

## Checklist
- [x] The changes in this PR meet the [docs style
guide/fundamentals](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/content-style-guide.md)
required for all content.
- [x] Applied the proper versioning rules if the content is for specific
dbt version(s): ([version a whole
page](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#adding-a-new-version)
or [version a block of
content](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#versioning-blocks-of-content)

---------

Co-authored-by: Joel Labes <joel.labes@dbtlabs.com>
Co-authored-by: Matt Shaver <60105315+matthewshaver@users.noreply.github.com>

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -605,3 +605,10 @@ kyle_dempsey:
     linkedin: k-dempsey
   name: Kyle Dempsey
   page: true
+jialuo_chen:
+  image_url: /img/blog/authors/jialuo_chen.jpg
+  title: Software Engineer at Google
+  socials:
+    linkedin: jialuo-chen-31680789
+  name: Jialuo Chen
+  page: true
