updating CTA for dbt workshop (#7751)
https://dbtlabs.atlassian.net/browse/PRODDOCS-70

## What are you changing in this pull request and why?

Updating CTAs for dbt workshop.

## Checklist
<!-- Ensure your PR meets the following items. Feel free to add
additiona checklist items to the list if additional checks need to
happen before the PR is merged, such as:
- [ ] Needs technical review
- [ ] Change base branch
- [ ] Merge on xyz date
-->
- [ ] The changes in this PR meet the [docs style
guide/fundamentals](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/content-style-guide.md)
required for all content.
- [ ] Applied the proper versioning rules if the content is for specific
dbt version(s): ([version a whole
page](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#adding-a-new-version)
or [version a block of
content](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#versioning-blocks-of-content)
- [ ] The content in this PR requires a dbt release note, so I added one
to the [release notes
page](https://docs.getdbt.com/docs/dbt-versions/dbt-cloud-release-notes).).
<!--
PRE-RELEASE VERSION OF dbt (if so, uncomment):
- [ ] Add a note to the prerelease version [Migration
Guide](https://github.com/dbt-labs/docs.getdbt.com/tree/current/website/docs/docs/dbt-versions/core-upgrade)
-->
<!-- 
ADDING OR REMOVING PAGES (if so, uncomment):
- [ ] Add/remove page in `website/sidebars.js`
- [ ] Provide a unique filename for new pages
- [ ] Add an entry for deleted pages in `website/vercel.json`
- [ ] Run link testing locally with `npm run build` to update the links
that point to deleted pages
-->

--- a/website/blog/ctas.yml
+++ b/website/blog/ctas.yml
@@ -35,11 +35,11 @@
   subheader: Join us on March 19th or 20th to hear from dbt Labs product leads about exciting new and coming-soon features designed to supercharge data developer workflows.
   button_text: Save your seat
   url: https://www.getdbt.com/resources/webinars/dbt-developer-day
-- name: launch_showcase_2025
-  header: 2025 dbt Launch Showcase 
-  subheader: Join us on May 28 to hear from our executives and product leaders about the latest features landing in dbt.
+- name: fast_track_to_dbt_2025
+  header: Fast track to dbt workshop
+  subheader: Join our live virtual workshop! Fast track to dbt — build and run your first dbt models.
   button_text: Save your seat
-  url: https://www.getdbt.com/resources/webinars/2025-dbt-cloud-launch-showcase
+  url: https://www.getdbt.com/resources/webinars/fast-track-to-dbt-workshop
 - name: on_demand_launch_showcase_2025
   header: 2025 dbt Launch Showcase on-demand 
   subheader: Watch our annual dbt Launch Showcase to hear from our executives and product leaders about the latest features landing in dbt. 
