--- a/website/vercel.json
+++ b/website/vercel.json
@@ -39,8 +39,8 @@
   ],
   "redirects": [
     {
-      "source": "docs/dbt-cloud-apis/mcp",
-      "destination": "docs/dbt-ai/about-mcp",
+      "source": "/docs/dbt-cloud-apis/mcp",
+      "destination": "/docs/dbt-ai/about-mcp",
       "permanent": true
     },
     {
