--- a/website/blog/metadata.yml
+++ b/website/blog/metadata.yml
@@ -2,7 +2,7 @@
 featured_image: ""
 
 # This CTA lives in right sidebar on blog index
-featured_cta: "fast_track_to_dbt_2025"
+featured_cta: "vs_code_extension"
 
 # Show or hide hero title, description, cta from blog index
 show_title: false
