Add required perms and a snippet (#7798)
## What are you changing in this pull request and why?

* Adds redirect for deleted page
* Rewrites the requirements for Fusion
* Adds snippet for BigQuery permissions.
* Links to required permissions instead of including it in the Fusion
prereqs.
* Adds back some deleted info from the about dbt install page, such as
off ramps to next steps.

<!-- vercel-deployment-preview -->
---
🚀 Deployment available! Here are the direct links to the updated files:


-
https://docs-getdbt-com-git-ff-fusion-preview-dbt-labs.vercel.app/docs/about-dbt-install
-
https://docs-getdbt-com-git-ff-fusion-preview-dbt-labs.vercel.app/docs/cloud/connect-data-platform/connect-bigquery
-
https://docs-getdbt-com-git-ff-fusion-preview-dbt-labs.vercel.app/docs/core/connect-data-platform/bigquery-setup

<!-- end-vercel-deployment-preview -->

---------

Co-authored-by: Matt Shaver <60105315+matthewshaver@users.noreply.github.com>

--- a/website/vercel.json
+++ b/website/vercel.json
@@ -44,6 +44,11 @@
       "permanent": true
     },
     {
+      "source": "/docs/core/about-core-setup",
+      "destination": "/docs/about-dbt-install",
+      "permanent": true
+    },
+    {
       "source": "/docs/cloud/secure/about-privatelink",
       "destination": "/docs/cloud/secure/about-private-connectivity",
       "permanent": true
