Building the remote dbt MCP server blog post (#7808)
## What are you changing in this pull request and why?

I'm adding a blog post on building the remote dbt MCP server and
announcing that it is in beta.

---------

Co-authored-by: Leona B. Campbell <3880403+runleonarun@users.noreply.github.com>
Co-authored-by: runleonarun <leona.campbell@dbtlabs.com>

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -612,3 +612,10 @@ jialuo_chen:
     linkedin: jialuo-chen-31680789
   name: Jialuo Chen
   page: true
+devon_fulcher:
+  image_url: /img/blog/authors/devon_fulcher.JPG
+  title: Senior Software Engineer at dbt Labs
+  socials:
+    linkedin: devonfulcher
+  name: Devon Fulcher
+  page: true
