--- a/.github/workflows/team-labeler.yml
+++ b/.github/workflows/team-labeler.yml
@@ -1,5 +1,11 @@
-on: [pull_request_target]
 name: team-label
+on:
+  pull_request:
+  issues:
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write # Necessary to create the labels if they do not exist yet.
 jobs:
   team-labeler:
     runs-on: ubuntu-latest
@@ -7,3 +13,5 @@ jobs:
     - uses: JulienKode/team-labeler-action@v1.1.0
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        # Optional: Add if you want to use GitHub team-based labeling
+        org-token: "${{ secrets.ORG_TOKEN }}"
