Updating banner and blog CTA for Coalesce 2025 (#7839)
## What are you changing in this pull request and why?
* Adding banner with link to coalesce site.
* Updating blog CTA to link to registration.


## Checklist
<!-- Ensure your PR meets the following items. Feel free to add
additiona checklist items to the list if additional checks need to
happen before the PR is merged, such as:
- [ ] Needs technical review
- [ ] Change base branch
- [ ] Merge on xyz date
-->
- [ ] The changes in this PR meet the [docs style
guide/fundamentals](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/content-style-guide.md)
required for all content.
- [ ] Applied the proper versioning rules if the content is for specific
dbt version(s): ([version a whole
page](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#adding-a-new-version)
or [version a block of
content](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#versioning-blocks-of-content)
- [ ] The content in this PR requires a dbt release note, so I added one
to the [release notes
page](https://docs.getdbt.com/docs/dbt-versions/dbt-cloud-release-notes).).
<!--
PRE-RELEASE VERSION OF dbt (if so, uncomment):
- [ ] Add a note to the prerelease version [Migration
Guide](https://github.com/dbt-labs/docs.getdbt.com/tree/current/website/docs/docs/dbt-versions/core-upgrade)
-->
<!-- 
ADDING OR REMOVING PAGES (if so, uncomment):
- [ ] Add/remove page in `website/sidebars.js`
- [ ] Provide a unique filename for new pages
- [ ] Add an entry for deleted pages in `website/vercel.json`
- [ ] Run link testing locally with `npm run build` to update the links
that point to deleted pages
-->

--- a/website/blog/ctas.yml
+++ b/website/blog/ctas.yml
@@ -20,11 +20,11 @@
   subheader: Watch Coalesce 2023 highlights and full sessions, dbt Labs' annual analytics engineering conference.
   button_text: Watch the talks
   url: https://www.youtube.com/playlist?list=PL0QYlrC86xQnT3HLh-XgvoTf9F3lbsADf
-- name: coalesce_2024_signup
-  header: Be part of Coalesce 2024
+- name: coalesce_2025_signup
+  header: Be part of Coalesce 2025
   subheader: Coalesce is the premiere analytics engineering conference! Sign up now for innovation, collaboration, and inspiration. Don't miss out!
   button_text: Register now
-  url: https://coalesce.getdbt.com/register
+  url: https://coalesce.getdbt.com/5Y3oaq/?utm_medium=internal&utm_source=docs&utm_campaign=q3-2026_coalesce-2025_aw&utm_content=coalesce____&utm_term=all_all__1
 - name: coalesce_2024_catchup
   header: Missed Coalesce 2024?
   subheader: Catch up on Coalesce 2024 and register to access a select number of on-demand sessions.
