Update CODEOWNERS to remove specific owners
Removed @amychen1776 as a code owner for several documentation files.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,13 +4,13 @@
 *      @dbt-labs/product-docs
 
 # Adapter & Package Development Docs
-/website/docs/docs/supported-data-platforms.md                @dbt-labs/product-docs @amychen1776 
-/website/docs/reference/warehouse-setups                      @dbt-labs/product-docs @amychen1776 
+/website/docs/docs/supported-data-platforms.md                @dbt-labs/product-docs
+/website/docs/reference/warehouse-setups                      @dbt-labs/product-docs
 # `resource-configs` contains more than just warehouse setups
 /website/docs/reference/resource-configs/*-configs.md           @dbt-labs/product-docs
-/website/docs/guides/advanced/adapter-development              @dbt-labs/product-docs @amychen1776
+/website/docs/guides/advanced/adapter-development              @dbt-labs/product-docs
 
-/website/docs/guides/building-packages                          @dbt-labs/product-docs @amychen1776
+/website/docs/guides/building-packages                          @dbt-labs/product-docs
 /website/docs/guides/creating-new-materializations              @dbt-labs/product-docs
 
 # Require approval from the Multicell team when making
