--- a/.github/workflows/add_issue_to_project.yml
+++ b/.github/workflows/add_issue_to_project.yml
@@ -9,7 +9,7 @@ jobs:
     name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@v0.5.0
+      - uses: actions/add-to-project@31b3f3ccdc584546fc445612dec3f38ff5edb41c # actions/add-to-project@v0.5.0
         with:
           project-url: https://github.com/orgs/dbt-labs/projects/14 
           github-token: ${{ secrets.DOCS_SECRET }}
