--- a/.github/workflows/codeowners-check.yml
+++ b/.github/workflows/codeowners-check.yml
@@ -11,8 +11,8 @@ jobs:
     if: github.actor != 'dependabot[bot]'
     runs-on: depot-ubuntu-24.04
     steps:
-      - uses: actions/checkout@v4
-      - uses: mszostok/codeowners-validator@v0.7.2
+      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # actions/checkout@v4
+      - uses: mszostok/codeowners-validator@f555ba682ec613249e7e478a4e0bff3ba35dc79f # mszostok/codeowners-validator@v0.7.2
         with:
           github_access_token: "${{ secrets.OWNERS_VALIDATOR_GITHUB_SECRET }}"
           checks: "owners,duppatterns"
