--- a/.github/workflows/team-labeler.yml
+++ b/.github/workflows/team-labeler.yml
@@ -10,7 +10,7 @@ jobs:
   team-labeler:
     runs-on: ubuntu-latest
     steps:
-    - uses: JulienKode/team-labeler-action@v1.1.0
+    - uses: JulienKode/team-labeler-action@a205b2457cc66b356257560e3c7bb853a9e8199e # JulienKode/team-labeler-action@v1.1.0
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         # Optional: Add if you want to use GitHub team-based labeling
