--- a/.github/workflows/docs-pages-badge.yml
+++ b/.github/workflows/docs-pages-badge.yml
@@ -2,13 +2,14 @@ name: Docs total pages badge
 
 on:
   push:
-    branches: ["**"]
+    branches: ["current"]                 # only update when main changes
     paths:
       - "website/**"
       - "**/*.md"
       - "**/*.mdx"
-  pull_request:
-  workflow_dispatch:
+  schedule:
+    - cron: "0 6 * * *"                # optional: refresh daily at 06:00 UTC
+  workflow_dispatch:                    # manual run if needed
 
 permissions:
   contents: write
@@ -19,16 +20,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0               # needed because we push a commit
 
       - name: Ensure jq is available
         run: |
           if ! command -v jq >/dev/null 2>&1; then
             sudo apt-get update && sudo apt-get install -y jq
           fi
-
-      - name: Determine target branch
-        run: echo "BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}" >> $GITHUB_ENV
 
       - name: Count total pages (docs + best practices + faqs + guides + reference + snippets)
         id: counts
@@ -66,7 +64,6 @@ jobs:
           SNIPPETS=$(count_any website/snippets website/snippets)
 
           TOTAL=$(( DOCS + BEST + FAQS + GUIDES + REF + SNIPPETS ))
-
           echo "total=${TOTAL}" >> "$GITHUB_OUTPUT"
 
       - name: Write Shields endpoint JSON (total only)
@@ -75,19 +72,20 @@ jobs:
             '{schemaVersion:1,label:$label,message:$message,color:"informational"}' \
             > ".badges/total.json"
 
-      - name: Commit badge JSON to branch
-        if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
+      - name: Commit badge JSON to current
         run: |
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .badges/total.json
+
           if git diff --cached --quiet; then
             echo "No badge changes to commit."
             exit 0
           fi
+
           git commit -m "chore: update docs total pages badge"
-          git pull --rebase origin "${BRANCH}" || true
-          git push origin "HEAD:${BRANCH}"
+          git pull --rebase origin current || true
+          git push origin HEAD:current
 
       - name: Summary
         run: |
