--- a/.github/workflows/docs-pages-badge.yml
+++ b/.github/workflows/docs-pages-badge.yml
@@ -2,14 +2,13 @@ name: Docs total pages badge
 
 on:
   push:
-    branches: ["current"]                 # only update when main changes
+    branches: ["**"]
     paths:
       - "website/**"
       - "**/*.md"
       - "**/*.mdx"
-  schedule:
-    - cron: "0 6 * * *"                # optional: refresh daily at 06:00 UTC
-  workflow_dispatch:                    # manual run if needed
+  pull_request:
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -20,13 +19,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0               # needed because we push a commit
+          fetch-depth: 0
 
       - name: Ensure jq is available
         run: |
           if ! command -v jq >/dev/null 2>&1; then
             sudo apt-get update && sudo apt-get install -y jq
           fi
+
+      - name: Determine target branch
+        run: echo "BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}" >> $GITHUB_ENV
 
       - name: Count total pages (docs + best practices + faqs + guides + reference + snippets)
         id: counts
@@ -64,6 +66,7 @@ jobs:
           SNIPPETS=$(count_any website/snippets website/snippets)
 
           TOTAL=$(( DOCS + BEST + FAQS + GUIDES + REF + SNIPPETS ))
+
           echo "total=${TOTAL}" >> "$GITHUB_OUTPUT"
 
       - name: Write Shields endpoint JSON (total only)
@@ -72,20 +75,19 @@ jobs:
             '{schemaVersion:1,label:$label,message:$message,color:"informational"}' \
             > ".badges/total.json"
 
-      - name: Commit badge JSON to current
+      - name: Commit badge JSON to branch
+        if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
         run: |
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .badges/total.json
-
           if git diff --cached --quiet; then
             echo "No badge changes to commit."
             exit 0
           fi
-
           git commit -m "chore: update docs total pages badge"
-          git pull --rebase origin current || true
-          git push origin HEAD:current
+          git pull --rebase origin "${BRANCH}" || true
+          git push origin "HEAD:${BRANCH}"
 
       - name: Summary
         run: |
