--- a/.github/workflows/docs-pages-badge.yml
+++ b/.github/workflows/docs-pages-badge.yml
@@ -2,13 +2,13 @@ name: Docs total pages badge
 
 on:
   push:
-    branches: ["current"]
+    branches: ["current"]           # only update when current changes
     paths:
       - "website/**"
       - "**/*.md"
-      - "**/*.mdx"
-  pull_request:
-  workflow_dispatch:
+  schedule:
+    - cron: "0 6 * * *"             # optional: refresh daily at 06:00 UTC
+  workflow_dispatch:                 # allow manual runs
 
 permissions:
   contents: write
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0             # we push a commit
 
       - name: Ensure jq is available
         run: |
@@ -27,10 +27,7 @@ jobs:
             sudo apt-get update && sudo apt-get install -y jq
           fi
 
-      - name: Determine target branch
-        run: echo "BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}" >> $GITHUB_ENV
-
-      - name: Count total pages (docs + snippets)
+      - name: Count total pages (.md only in website/docs + website/snippets)
         id: counts
         shell: bash
         run: |
@@ -40,7 +37,7 @@ jobs:
           count_dir () {
             local DIR="$1"
             if [[ -d "$DIR" ]]; then
-              find "$DIR" -type f \( -iname "*.md" -o -iname "*.mdx" \) \
+              find "$DIR" -type f -iname "*.md" \
                 -not -path "*/_partials/*" \
                 -not -path "*/_includes/*" \
                 -not -path "*/_components/*" \
@@ -50,19 +47,9 @@ jobs:
             fi
           }
 
-          count_any () {
-            local SUM=0
-            for d in "$@"; do
-              SUM=$(( SUM + $(count_dir "$d") ))
-            done
-            echo "$SUM"
-          }
-
-          DOCS=$(count_any website/docs)
-          SNIPPETS=$(count_any website/snippets website/snippets)
-
+          DOCS=$(count_dir website/docs)
+          SNIPPETS=$(count_dir website/snippets)
           TOTAL=$(( DOCS + SNIPPETS ))
-
           echo "total=${TOTAL}" >> "$GITHUB_OUTPUT"
 
       - name: Write Shields endpoint JSON (total only)
@@ -71,8 +58,7 @@ jobs:
             '{schemaVersion:1,label:$label,message:$message,color:"informational"}' \
             > ".badges/total.json"
 
-      - name: Commit badge JSON to branch
-        if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
+      - name: Commit badge JSON to current
         run: |
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -82,13 +68,13 @@ jobs:
             exit 0
           fi
           git commit -m "chore: update docs total pages badge"
-          git pull --rebase origin "${BRANCH}" || true
-          git push origin "HEAD:${BRANCH}"
+          git pull --rebase origin current || true
+          git push origin HEAD:current
 
       - name: Summary
         run: |
           {
             echo "### Docs total pages"
             echo ""
-            echo "**${{ steps.counts.outputs.total }}** (includes snippets)"
+            echo "**${{ steps.counts.outputs.total }}** (counts .md in website/docs + website/snippets)"
           } >> $GITHUB_STEP_SUMMARY
