--- a/.github/workflows/docs-pages-badge.yml
+++ b/.github/workflows/docs-pages-badge.yml
@@ -2,7 +2,7 @@ name: Docs total pages badge
 
 on:
   push:
-    branches: ["current"]           # only update when current changes
+    branches: ["**"]           # only update when current changes
     paths:
       - "website/**"
       - "**/*.md"
